Feat/#72 prefered post api (#75)
* feat: [#72-] cors 도메인 설정 변경
- 모든 도메인 허용 -> 사전에 정의한 도메인의 요청만 허용하도록 변경
Fixes: #72

* feat: [#72 - ] 현재 사용자가 좋아요를 누른 게시글 목록 조회 API 구현
- 기능에 대한 service, repository, facade, controller 레이어 구현 완료
Fixes: #72

* chore: [#72 - ] docker 이미지 빌드 - 업로드 스크립트 구현
- image_builder.sh : docker 이미지 빌드용 쉘 스크립트
- image_uploader.sh: docker 이미지 업로드용 쉘 스크립트
Fixes: #72

* feat: [ #72 - ] 파일 스토리지 관련 환경변수 관리 방식 변경
- @Valuse + @ConfigurationPropertise -> @ConfigurationProperties 단일 방식으로 변경
- base url에 대한 설정 정보 정상 적용 여부를 확인하기 위한 로그 추가
Fixes: #72

* feat: [ #72 - ] CategorySeeder 추가 및 PreferSeeder 에러 메세지 구체화
- 사용자 수보다, 게시글 당 좋아요 수가 많은 경우 도메인 규칙에 벗어난다는 예외 메세지를 구체적으로 작성
- CategorySeeder 추가 ( 추후 북마크 기반으로 변경해야함 )
Fixes: #72

* test: [ #72 - ] test senario 조합 기반 테스트 데이터 생성 기능 추가
- TestDataRemover : 데이터 전체 삭제를 위한 범용 메서드 제공
- PostSenarioSupport : 게시글 관련 테스트 데이터 생성 시나리오를 조합 및 관리
Fixes: #72

* test: [ #72 - ] 좋아요를 누른 게시글 조회 성공 테스트 구현
- 테스트 데이터 생성 로직을 시나리오별 범용 메서드 -> 시나리오 조합 방식으로 변경 ( 테스트 명세 목적 )
- 좋아요를 누른 게시글 목록 조회 성공 테스트 구현
Fixes: #72

* chore: [#72-] application.yml 변경
- CORS 설정에서 사용하는 allowed origin을 환경변수로 관리
- local file url을 환경변수로 관리
Fixes: #72

* test: [#72 - ] 불필요한 테스트 코드 제거
- 카테고리에 저장한 게시글 목록 테스트에서 불필요한 코드 제거
Fixes: #72

* chore: [#72 - ] TestDataRemover 주석 변경
- 모든 테스트에서 사용할 수 있는 범용 데이터 삭제기임을 명시
Fixes: #72

* refactor: [#72 - ] 메서드 명칭 변경
- prefered -> preferred로 수정하여 오타 제거
Fixes: #72

* test: [ #72 - ] test data remover 로직 수정
- designBoardRepository.deleteAll이 아닌 designComponentRepository의 deleteAll을 호출하는 문제 수정
Fixes: #72

* test: [ #72 - ] 좋아요를 누른 게시글 목록 테스트 수정
- prefered -> preferred로 명칭 변경
Fixes: #72